crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@158.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION price_key_from_table(price) RETURNS price_key AS $$\n    SELECT $1.id\n$$ LANGUAGE SQL;"
---
CreateFunctionStmt@0..101
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..36 "price_key_from_table"
  Ascii40@36..37 "("
  FunctionParameter@37..42
    TypeName@37..42
      Ident@37..42 "price"
  Ascii41@42..43 ")"
  Whitespace@43..44 " "
  Returns@44..51 "RETURNS"
  Whitespace@51..52 " "
  TypeName@52..61
    Ident@52..61 "price_key"
  Whitespace@61..62 " "
  DefElem@62..87
    As@62..64 "AS"
    Whitespace@64..65 " "
    List@65..87
      Sconst@65..87 "$$\n    SELECT $1.id\n$$"
  Whitespace@87..88 " "
  DefElem@88..100
    Language@88..96 "LANGUAGE"
    Whitespace@96..97 " "
    SqlP@97..100 "SQL"
  Ascii59@100..101 ";"

