crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@159.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION price_key_from_input(price_input) RETURNS price_key AS $$\n    SELECT $1.id\n$$ LANGUAGE SQL;"
---
CreateFunctionStmt@0..107
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..36 "price_key_from_input"
  Ascii40@36..37 "("
  FunctionParameter@37..48
    TypeName@37..48
      Ident@37..48 "price_input"
  Ascii41@48..49 ")"
  Whitespace@49..50 " "
  Returns@50..57 "RETURNS"
  Whitespace@57..58 " "
  TypeName@58..67
    Ident@58..67 "price_key"
  Whitespace@67..68 " "
  DefElem@68..93
    As@68..70 "AS"
    Whitespace@70..71 " "
    List@71..93
      Sconst@71..93 "$$\n    SELECT $1.id\n$$"
  Whitespace@93..94 " "
  DefElem@94..106
    Language@94..102 "LANGUAGE"
    Whitespace@102..103 " "
    SqlP@103..106 "SQL"
  Ascii59@106..107 ";"

