crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@16.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into quadtable values (1, ((3.3,4.4),(5.5,6.6)));"
---
InsertStmt@0..56
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..21
    Ident@12..21 "quadtable"
  Whitespace@21..22 " "
  SelectStmt@22..52
    Values@22..28 "values"
    Whitespace@28..29 " "
    Ascii40@29..30 "("
    List@30..52
      AConst@30..31
        Iconst@30..31 "1"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      RowExpr@33..52
        Ascii40@33..34 "("
        RowExpr@34..42
          Ascii40@34..35 "("
          AConst@35..38
            Fconst@35..38 "3.3"
          Ascii44@38..39 ","
          AConst@39..42
            Fconst@39..42 "4.4"
        Ascii41@42..43 ")"
        Ascii44@43..44 ","
        RowExpr@44..52
          Ascii40@44..45 "("
          AConst@45..48
            Fconst@45..48 "5.5"
          Ascii44@48..49 ","
          AConst@49..52
            Fconst@49..52 "6.6"
  Ascii41@52..53 ")"
  Ascii41@53..54 ")"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

