crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@160.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into price values (1,false,42), (10,false,100), (11,true,17.99);"
---
InsertStmt@0..71
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..17
    Ident@12..17 "price"
  Whitespace@17..18 " "
  SelectStmt@18..69
    Values@18..24 "values"
    Whitespace@24..25 " "
    Ascii40@25..26 "("
    List@26..36
      AConst@26..27
        Iconst@26..27 "1"
      Ascii44@27..28 ","
      AConst@28..33
        FalseP@28..33 "false"
      Ascii44@33..34 ","
      AConst@34..36
        Iconst@34..36 "42"
    Ascii41@36..37 ")"
    Ascii44@37..38 ","
    Whitespace@38..39 " "
    Ascii40@39..40 "("
    List@40..52
      AConst@40..42
        Iconst@40..42 "10"
      Ascii44@42..43 ","
      AConst@43..48
        FalseP@43..48 "false"
      Ascii44@48..49 ","
      AConst@49..52
        Iconst@49..52 "100"
    Ascii41@52..53 ")"
    Ascii44@53..54 ","
    Whitespace@54..55 " "
    Ascii40@55..56 "("
    List@56..69
      AConst@56..58
        Iconst@56..58 "11"
      Ascii44@58..59 ","
      AConst@59..63
        TrueP@59..63 "true"
      Ascii44@63..64 ","
      AConst@64..69
        Fconst@64..69 "17.99"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

