crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@165.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function fcompos1(v compos) returns void as $$\ninsert into compos values (v);  -- fail\n$$ language sql;"
---
CreateFunctionStmt@0..110
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..24 "fcompos1"
  Ascii40@24..25 "("
  FunctionParameter@25..33
    Ident@25..26 "v"
    Whitespace@26..27 " "
    TypeName@27..33
      Ident@27..33 "compos"
  Ascii41@33..34 ")"
  Whitespace@34..35 " "
  Returns@35..42 "returns"
  Whitespace@42..43 " "
  TypeName@43..47
    Ident@43..47 "void"
  Whitespace@47..48 " "
  DefElem@48..96
    As@48..50 "as"
    Whitespace@50..51 " "
    List@51..96
      Sconst@51..96 "$$\ninsert into compos ..."
  Whitespace@96..97 " "
  DefElem@97..109
    Language@97..105 "language"
    Whitespace@105..106 " "
    SqlP@106..109 "sql"
  Ascii59@109..110 ";"

