crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@167.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function fcompos2(v compos) returns void as $$\nselect fcompos1(v);\n$$ language sql;"
---
CreateFunctionStmt@0..90
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..24 "fcompos2"
  Ascii40@24..25 "("
  FunctionParameter@25..33
    Ident@25..26 "v"
    Whitespace@26..27 " "
    TypeName@27..33
      Ident@27..33 "compos"
  Ascii41@33..34 ")"
  Whitespace@34..35 " "
  Returns@35..42 "returns"
  Whitespace@42..43 " "
  TypeName@43..47
    Ident@43..47 "void"
  Whitespace@47..48 " "
  DefElem@48..76
    As@48..50 "as"
    Whitespace@50..51 " "
    List@51..76
      Sconst@51..76 "$$\nselect fcompos1(v) ..."
  Whitespace@76..77 " "
  DefElem@77..89
    Language@77..85 "language"
    Whitespace@85..86 " "
    SqlP@86..89 "sql"
  Ascii59@89..90 ";"

