crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@168.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create function fcompos3(v compos) returns void as $$\nselect fcompos1(fcompos3.v.*);\n$$ language sql;"
---
CreateFunctionStmt@0..101
  Create@0..6 "create"
  Whitespace@6..7 " "
  Function@7..15 "function"
  Whitespace@15..16 " "
  Ident@16..24 "fcompos3"
  Ascii40@24..25 "("
  FunctionParameter@25..33
    Ident@25..26 "v"
    Whitespace@26..27 " "
    TypeName@27..33
      Ident@27..33 "compos"
  Ascii41@33..34 ")"
  Whitespace@34..35 " "
  Returns@35..42 "returns"
  Whitespace@42..43 " "
  TypeName@43..47
    Ident@43..47 "void"
  Whitespace@47..48 " "
  DefElem@48..87
    As@48..50 "as"
    Whitespace@50..51 " "
    List@51..87
      Sconst@51..87 "$$\nselect fcompos1(fc ..."
  Whitespace@87..88 " "
  DefElem@88..100
    Language@88..96 "language"
    Whitespace@96..97 " "
    SqlP@97..100 "sql"
  Ascii59@100..101 ";"

