crates/pg_syntax/tests/snapshots/postgres_regress/rowtypes@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into quadtable values (2, ((null,4.4),(5.5,6.6)));"
---
InsertStmt@0..57
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..21
    Ident@12..21 "quadtable"
  Whitespace@21..22 " "
  SelectStmt@22..53
    Values@22..28 "values"
    Whitespace@28..29 " "
    Ascii40@29..30 "("
    List@30..53
      AConst@30..31
        Iconst@30..31 "2"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      RowExpr@33..53
        Ascii40@33..34 "("
        RowExpr@34..43
          Ascii40@34..35 "("
          AConst@35..39
            NullP@35..39 "null"
          Ascii44@39..40 ","
          AConst@40..43
            Fconst@40..43 "4.4"
        Ascii41@43..44 ")"
        Ascii44@44..45 ","
        RowExpr@45..53
          Ascii40@45..46 "("
          AConst@46..49
            Fconst@46..49 "5.5"
          Ascii44@49..50 ","
          AConst@50..53
            Fconst@50..53 "6.6"
  Ascii41@53..54 ")"
  Ascii41@54..55 ")"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

